objects/Strategic_Initiative__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipName>Strategic_Initiatives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Business_Case__c</fullName>
        <label>Customer Business Case</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Sponsor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Sponsor Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Strategic_Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_business_priority_addressed__c</fullName>
        <label>Customer business priority addressed</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_the_Initiative__c</fullName>
        <label>Description of the Initiative</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Timeframe__c</fullName>
        <label>Execution Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 3 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HP_Execution_Status__c</fullName>
        <label>HP Execution Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HP_Funding_Status__c</fullName>
        <label>HP Funding Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HP_Solutions__c</fullName>
        <label>HP Solutions</label>
        <picklist>
            <picklistValues>
                <fullName>Application Transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security and Risk Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Performance Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Print Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HP_Sponsor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HP Sponsor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategic_Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Innovation_Initiative__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>It is a key goal to bring innovation to our clients. If the client views this initiative as ‘Innovation’ tick this box. For questions, see  the Innovation Agenda website:
http://intranet.hp.com/tsg/ww3/
EnterpriseInnovation/Pages/
InnovationAgenda.aspx</inlineHelpText>
        <label>Innovation Initiative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Disclosure_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Disclosure Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projected_Initiative_Value__c</fullName>
        <label>Projected Initiative HP Value ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Summary_of_Dependencies__c</fullName>
        <label>Summary of Dependencies</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_of_Risks_and_Issues__c</fullName>
        <label>Summary of Risks and Issues</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <label>HP Strategic Initiative</label>
    <nameField>
        <label>HP Strategic Initiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HP Strategic Initiatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>